# tagger

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  bacon.toml  render.txt  rustfmt.toml  todo.txt
.github/workflows/: rust.yml
client/: Cargo.toml  index.html  index.scss
client/src/: client.rs  collections.rs  image_overlay.rs  images.rs  login_overlay.rs  main.rs  pagination.rs  tag_menu.rs  toolbar.rs
client/static/: index.css  index.html
render/: Cargo.toml
render/src/: dispatch.rs  dom.rs  im_diff.rs  lib.rs  macros.rs  render.rs
server/: Cargo.toml  build.rs  todo.txt
server/schema/: Cargo.toml
server/schema/src/: lib.rs
server/src/: auth.rs  images.rs  lib.rs  lock_map.rs  main.rs  media.rs  sync.rs  tag_expression.rs  tag_expression_grammar.lalrpop  tags.rs  todo.txt  warp_util.rs
shared/: Cargo.toml
shared/src/: lib.rs  tag_expression.rs  tag_expression_grammar.lalrpop  tag_tree_grammar.lalrpop
