[package]
name = "tagger-client"
description = "Image tagging webapp frontend"
version = "0.1.0"
authors = ["Joel Dice <joel.dice@gmail.com>"]
edition = "2018"

[dependencies]
tagger-shared = { path = "../shared" }
wasm-bindgen-futures = "0.4"
wasm-bindgen-console-logger = "0.1"
reqwest = { version = "0.11", features = ["json"] }
sycamore = { path = "../../sycamore/packages/sycamore" }
log = "0.4"
futures = "0.3"
anyhow = "1"
serde = "1"
console_error_panic_hook = "0.1"
chrono = { version = "0.4", features = ["wasmbind"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location", "Document", "KeyboardEvent", "MouseEvent", "TouchEvent", "TouchList", "Touch", "EventTarget", "HtmlVideoElement"] }
