[package]
name = "tagger-client"
description = "Image tagging webapp frontend"
version = "0.1.0"
authors = ["Joel Dice <joel.dice@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
demo = ["base64"]
# TODO: Once Trunk supports enabling features, we can remove this:
default = ["demo"]

[dependencies]
tagger-shared = { path = "../shared" }
wasm-bindgen-futures = "0.4"
wasm-bindgen-console-logger = "0.1"
reqwest = { version = "0.11", features = ["json"] }
sycamore = "0.7"
log = "0.4"
futures = "0.3"
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_urlencoded = "0.7"
console_error_panic_hook = "0.1"
jsonwebtoken = "7"
chrono = { version = "0.4", features = ["wasmbind"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location", "Document", "KeyboardEvent", "MouseEvent", "TouchList", "Touch", "EventTarget", "HtmlVideoElement", "HtmlSelectElement", "Storage"] }
base64 = { version = "0.13", optional = true }

[dev-dependencies]
maplit = "1"
serde_json = "1"
