[package]
name = "tagger-client"
description = "Image tagging webapp frontend"
version = "0.1.0"
authors = ["Joel Dice <joel.dice@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
demo = ["base64"]
# TODO: Once Trunk supports enabling features, we can remove this:
default = ["demo"]

[dependencies]
tagger-shared = { path = "../shared" }
wasm-bindgen-futures = "0.4.31"
wasm-bindgen-console-logger = "0.1.1"
reqwest = { version = "0.11.11", features = ["json"] }
sycamore = "0.7.1"
log = "0.4.17"
futures = "0.3.21"
anyhow = "1.0.65"
serde = "1.0.144"
serde_derive = "1.0.137"
serde_urlencoded = "0.7.1"
console_error_panic_hook = "0.1.7"
jsonwebtoken = "8.1.1"
chrono = { version = "0.4.19", features = ["wasmbind"] }
wasm-bindgen = "0.2.81"
web-sys = { version = "0.3.58", features = ["Window", "Location", "Document", "KeyboardEvent", "MouseEvent", "TouchList", "Touch", "EventTarget", "HtmlVideoElement", "HtmlSelectElement", "Storage"] }
base64 = { version = "0.13.0", optional = true }

[dev-dependencies]
maplit = "1.0.2"
serde_json = "1.0.82"
