[package]
name = "tagger-server"
description = "Image tagging webapp backend"
version = "0.1.0"
authors = ["Joel Dice <joel.dice@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
bytes = "1"
chrono = "0.4"
futures = "0.3"
http = "0.2"
hyper = "0.14"
image = "0.23"
lazy_static = "1"
mime = "0.3"
pretty_env_logger = "0.4"
regex = "1"
rexiv2 = "0.9"
schema = { path = "./schema" }
serde = "1"
serde_derive = "1"
serde_json = "1"
sha2 = "0.9"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "sqlite" ] }
structopt = "0.3"
thiserror = "1"
ring = "0.16"
base64 = "0.13"
jsonwebtoken = "7"
rand = "0.8"
tempfile = "3"
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "fs", "time", "sync", "process" ] }
tokio-util = "0.6"
tracing = { version = "0.1", features = [ "log" ] }
warp = { version = "0.3", features = [ "tls" ] }
webp = "0.2"
tagger-shared = { path = "../shared" }
mp4parse = { git = "https://github.com/dicej/mp4parse-rust", branch = "creation_and_modification_times" }

[dev-dependencies]
tempfile = "3"
maplit = "1"

[build-dependencies]
anyhow = "1"
schema = { path = "./schema" }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "sqlite" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "fs" ] }
