[package]
name = "tagger-server"
description = "Image tagging web app backend"
version = "0.1.0"
authors = ["Joel Dice <joel.dice@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.62"
bytes = "1.1.0"
chrono = "0.4.19"
futures = "0.3.21"
hex = "0.4.3"
http = "0.2.8"
hyper = "0.14.19"
image = "0.24.2"
lazy_static = "1.4.0"
mime = "0.3.16"
pretty_env_logger = "0.4.0"
regex = "1.5.6"
rexiv2 = "0.9.1"
schema = { path = "./schema" }
serde = "1.0.144"
serde_derive = "1.0.137"
serde_json = "1.0.82"
sha2 = "0.10.2"
sqlx = { version = "0.5.13", features = [ "runtime-tokio-native-tls", "sqlite" ] }
structopt = "0.3.26"
thiserror = "1.0.31"
ring = "0.16.20"
base64 = "0.13.0"
jsonwebtoken = "8.1.1"
rand = "0.8.5"
tempfile = "3.3.0"
tokio = { version = "1.19.2", features = [ "macros", "rt-multi-thread", "fs", "time", "sync", "process" ] }
tokio-util = { version = "0.7.3", features = [ "codec" ] }
tracing = { version = "0.1.35", features = [ "log" ] }
warp = { version = "0.3.2", features = [ "tls" ] }
webp = "0.2.2"
tagger-shared = { path = "../shared" }
mp4parse = { git = "https://github.com/dicej/mp4parse-rust", branch = "creation_and_modification_times" }

[dev-dependencies]
tempfile = "3.3.0"
maplit = "1.0.2"

[build-dependencies]
anyhow = "1.0.62"
schema = { path = "./schema" }
sqlx = { version = "0.5.13", features = [ "runtime-tokio-native-tls", "sqlite" ] }
tokio = { version = "1.19.2", features = [ "macros", "rt-multi-thread", "fs" ] }
