[package]
name = "tagger-shared"
description = "Image tagging webapp shared code"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
serde = "1"
serde_derive = "1"
lalrpop-util = "0.19"
regex-syntax = "0.6"
lazy_static = "1"
chrono = { version = "0.4", features = [ "serde" ] }

[dev-dependencies]
maplit = "1"

[build-dependencies]
lalrpop = "0.19"
